@@ -7,6 +7,8 @@ Version 5.24.0
 Fixed: Issue #624: Make the fail2ban protocol test backward
 compatible with older protocol versions.
 
+Fixed: Issue #634: Check program output.
+
 
 Version 5.23.0
 
